<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Menu"
        android:background="@drawable/background">


    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent"
            tools:context="br.com.fake.steam.LoginActivity">

        <ImageView
                android:layout_width="270dp"
                android:layout_height="184dp"
                android:layout_gravity="center"
                android:src="@mipmap/logohelpets"
                tools:layout_editor_absoluteY="38dp"
                tools:layout_editor_absoluteX="16dp"/>

        <!--REGISTRAR NOME-->
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="#EEE"
                android:textStyle="bold"
                android:text="@string/register_name" />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_text"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textColorHint="#CCC"

                android:hint="" android:id="@+id/txtlogin"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="#EEE"
                android:text="@string/register_password"
                android:textStyle="bold"
                android:layout_marginTop="40dp"/>

        <ProgressBar android:layout_width="match_parent" android:layout_height="wrap_content"
        android:visibility="invisible" android:id="@+id/progressBar"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:background="@drawable/edit_text"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textColorHint="#CCC"
                android:hint="@string/register_password_hint" android:id="@+id/txtSenha"/>

        <!--CONFIRMAR SENHA-->
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="#EEE"
                android:text="@string/confirm_password"
                android:textStyle="bold"
                android:layout_marginTop="40dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:background="@drawable/edit_text"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textColorHint="#CCC"
                android:hint="@string/confirm_password_hint" android:id="@+id/txtCSenha"/>

        <!-- GMAIL -->
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="#EEE"
                android:text="@string/register_gmail"
                android:textStyle="bold"
                android:layout_marginTop="40dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:background="@drawable/edit_text"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textColorHint="#CCC"
                android:hint="@string/gmail_hint" android:id="@+id/txtGmail"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/register_button"
                android:text="REGISTER"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp" android:id="@+id/idRegister"/>

    </LinearLayout>
</ScrollView>