<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Info2">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context="br.com.fake.steam.LoginActivity"
            android:background="@drawable/background">

        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/search_button"
                android:text="@string/search_for_a_pet"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:layout_marginTop="100dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/post_button"
                android:text="@string/post_a_pet"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:layout_marginTop="100dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/contact_button"
                android:text="@string/contact_a_pet"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:layout_marginTop="100dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp" android:id="@+id/idContactong"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/exit_button"
                android:text="@string/exit"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp" android:id="@+id/idExit"/>
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".Menu"
                android:background="@drawable/background" tools:layout_editor_absoluteY="129dp"
                tools:layout_editor_absoluteX="0dp">






        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>